feat(antlr): 분석 입구 통일 — 두 모드를 내용 기반 분류로 표준 data/ 구성
- IntakeClassifier(신규): .sql 내용으로 표 정의(DDL) vs 프로시저/함수(source) 판정 — 파일명 아닌 내용
- FileStorageService: uploadFiles 내용 기반 분류 + intakeFromPath(경로모드, 하드링크→복사 반입)
- ParsingOrchestrator: pathMode 분기 제거 → 업로드/경로 모두 data/source 파싱
- 헌법 III v1.1.0: 경로 기반 → 내용 기반 분류로 개정(근거 기록)
- spec 006 + IntakeClassifierTest + Dockerfile + deploy/k8s

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>