@@ -2,8 +2,6 @@ package legacymodernizer.parser.service;
 
 import java.io.IOException;
 import java.nio.charset.Charset;
-import java.nio.charset.MalformedInputException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -18,25 +16,36 @@ import java.io.File;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
+import legacymodernizer.parser.service.IntakeClassifier.Kind;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
 /**
- * 파일 저장/삭제/경로 관리 서비스
+ * 파일 저장/삭제/경로 관리 + 입구 반입(content 기반 분류) 서비스.
  *
  * 저장 구조 — analysis/ 는 source/ 폴더 구조를 그대로 미러:
  *   data/
- *     ├── source/              → 소스 파일 (업로드 시)
- *     ├── ddl/                 → DDL 파일 (원본 폴더 구조 유지)
+ *     ├── source/              → 소스 원본 (프로시저/함수/기타 코드)
+ *     ├── ddl/                 → 표 정의(DDL) — 내용으로 분류
  *     └── analysis/            → 파싱 결과 JSON (source 와 동일 구조)
+ *
+ * 분류는 파일명/경로가 아니라 {@link IntakeClassifier}(내용)로 한다(헌법 III v1.1.0).
+ * 업로드/경로 두 모드 모두 결과가 동일한 data/ 로 수렴한다(spec 006 입구 통일).
  */
 @Slf4j
 @Service
+@RequiredArgsConstructor
 public class FileStorageService {
+
+    private final IntakeClassifier classifier;
 
     private static final String BASE_DIR = resolveBaseDir();
     private static final String SOURCE = "source";
     private static final String DDL = "ddl";
     private static final String ANALYSIS = "analysis";
+
+    /** 입구 반입 요약 — 분류 수 + 건너뛴 파일(사유 포함). */
+    public record IntakeResult(int ddlCount, int sourceCount, List<String> skipped) {}
 
     private static String resolveBaseDir() {
         String dockerContext = System.getenv("DOCKER_COMPOSE_CONTEXT");
@@ -95,7 +104,6 @@ public class FileStorageService {
 
         Path sourceBase = sourceDir();
         Path ddlBase = ddlDir();
-
         String normalizedTargetFolder = normalizeFolderPrefix(targetFolder);
 
         for (MultipartFile mf : files) {
@@ -104,38 +112,34 @@ public class FileStorageService {
             String originalName = mf.getOriginalFilename();
             if (originalName == null || originalName.isBlank()) continue;
 
+            // ddl/ 접두는 역호환 힌트로만 — 진실은 내용(헌법 III). 분류 전 접두 제거.
             String relativePath = originalName.replace("\\", "/");
-            boolean isDdl = relativePath.startsWith("ddl/");
-
-            // 원본명에 폴더가 없으면 targetFolder prefix 적용 (DDL 은 제외: 기존 규칙 유지)
-            if (!isDdl && !normalizedTargetFolder.isEmpty() && !relativePath.contains("/")) {
-                relativePath = normalizedTargetFolder + "/" + relativePath;
-            }
+            if (relativePath.startsWith("ddl/")) relativePath = relativePath.substring(4);
 
             try {
-                if (isDdl) {
-                    String ddlPath = relativePath.substring(4);
-                    Path dest = ddlBase.resolve(ddlPath);
-                    saveFile(mf, dest);
+                byte[] bytes = mf.getBytes();
+                String content = decode(bytes);
 
-                    ddlList.add(Map.of(
-                            "fileName", relativePath,
-                            "fileContent", readContent(dest)));
+                if (classifier.classify(relativePath, content) == Kind.DDL) {
+                    Path dest = ddlBase.resolve(relativePath);
+                    writeBytes(dest, bytes);
+                    ddlList.add(Map.of("fileName", relativePath, "fileContent", content));
                     log.debug("  [DDL] {}", relativePath);
                 } else {
-                    Path dest = sourceBase.resolve(relativePath);
-                    saveFile(mf, dest);
+                    // 원본명에 폴더가 없으면 targetFolder prefix 적용(폴더 picker 상대경로는 유지).
+                    String srcRel = relativePath;
+                    if (!normalizedTargetFolder.isEmpty() && !srcRel.contains("/")) {
+                        srcRel = normalizedTargetFolder + "/" + srcRel;
+                    }
+                    Path dest = sourceBase.resolve(srcRel);
+                    writeBytes(dest, bytes);
 
-                    if (isTargetExtension(relativePath, targetExtensions)) {
-                        srcList.add(Map.of(
-                                "fileName", relativePath,
-                                "fileContent", readContent(dest)));
-                        log.debug("  [SOURCE] {}", relativePath);
+                    if (isTargetExtension(srcRel, targetExtensions)) {
+                        srcList.add(Map.of("fileName", srcRel, "fileContent", content));
+                        log.debug("  [SOURCE] {}", srcRel);
                     } else {
-                        nontargetList.add(Map.of(
-                                "fileName", relativePath,
-                                "fileContent", readContent(dest)));
-                        log.debug("  [SOURCE:NONTARGET] {}", relativePath);
+                        nontargetList.add(Map.of("fileName", srcRel, "fileContent", content));
+                        log.debug("  [SOURCE:NONTARGET] {}", srcRel);
                     }
                 }
             } catch (IOException e) {
@@ -148,6 +152,42 @@ public class FileStorageService {
         result.put("ddlFiles", ddlList);
         result.put("nontargetFiles", nontargetList);
         return result;
+    }
+
+    /**
+     * 경로 모드 입구 — 로컬 폴더를 내용 분류해 data/{source, ddl} 로 반입(하드링크→복사 폴백).
+     * data/ 는 매 반입마다 전량 리셋(헌법 IV). 한 파일 실패는 격리·기록하고 계속(spec 006 US4).
+     */
+    public IntakeResult intakeFromPath(Path localRoot) {
+        clearDirectory(sourceDir());
+        clearDirectory(ddlDir());
+        clearDirectory(analysisDir());
+        Path sourceBase = sourceDir();
+        Path ddlBase = ddlDir();
+
+        List<Path> files;
+        try (var walk = Files.walk(localRoot)) {
+            files = walk.filter(Files::isRegularFile).sorted().toList();
+        } catch (IOException e) {
+            throw new RuntimeException("로컬 폴더 탐색 실패: " + localRoot, e);
+        }
+
+        int ddlCount = 0, sourceCount = 0;
+        List<String> skipped = new ArrayList<>();
+        for (Path f : files) {
+            String rel = localRoot.relativize(f).toString().replace("\\", "/");
+            try {
+                Kind kind = classifier.classify(rel, readContent(f));
+                Path dest = (kind == Kind.DDL ? ddlBase : sourceBase).resolve(rel);
+                materialize(f, dest);
+                if (kind == Kind.DDL) ddlCount++; else sourceCount++;
+            } catch (Exception e) {
+                skipped.add(rel + " (" + e.getMessage() + ")");
+                log.warn("[반입 건너뜀] {} - {}", rel, e.getMessage());
+            }
+        }
+        log.info("[경로 반입] ddl={}개, source={}개, 건너뜀={}개", ddlCount, sourceCount, skipped.size());
+        return new IntakeResult(ddlCount, sourceCount, skipped);
     }
 
     // ═══════════════════════════════════════════════════════════════════
@@ -190,25 +230,38 @@ public class FileStorageService {
         }
     }
 
-    private void saveFile(MultipartFile mf, Path dest) throws IOException {
+    /** 하드링크 우선(같은 볼륨 0 추가) → 불가(다른 볼륨/미지원/권한) 시 복사 폴백. */
+    private void materialize(Path src, Path dest) throws IOException {
         Files.createDirectories(dest.getParent());
-        Files.copy(mf.getInputStream(), dest, StandardCopyOption.REPLACE_EXISTING);
+        Files.deleteIfExists(dest);
+        try {
+            Files.createLink(dest, src);
+        } catch (IOException | UnsupportedOperationException e) {
+            Files.copy(src, dest, StandardCopyOption.REPLACE_EXISTING);
+        }
+    }
+
+    private void writeBytes(Path dest, byte[] bytes) throws IOException {
+        Files.createDirectories(dest.getParent());
+        Files.write(dest, bytes);
     }
 
     private String readContent(Path path) throws IOException {
-        try {
-            return Files.readString(path, StandardCharsets.UTF_8);
-        } catch (MalformedInputException e) {
+        return decode(Files.readAllBytes(path));
+    }
+
+    /** 텍스트 디코드 — UTF-8 → EUC-KR → MS949 폴백. 모두 실패 시 "[binary file]". */
+    private String decode(byte[] bytes) {
+        for (String cs : new String[] {"UTF-8", "EUC-KR", "MS949"}) {
             try {
-                return Files.readString(path, Charset.forName("EUC-KR"));
-            } catch (Exception e2) {
-                try {
-                    return Files.readString(path, Charset.forName("MS949"));
-                } catch (Exception e3) {
-                    log.warn("텍스트로 읽을 수 없는 파일 (바이너리): {}", path);
-                    return "[binary file]";
-                }
+                var decoder = Charset.forName(cs).newDecoder();
+                decoder.onMalformedInput(java.nio.charset.CodingErrorAction.REPORT);
+                decoder.onUnmappableCharacter(java.nio.charset.CodingErrorAction.REPORT);
+                return decoder.decode(java.nio.ByteBuffer.wrap(bytes)).toString();
+            } catch (Exception ignored) {
+                // 다음 인코딩 시도
             }
         }
+        return "[binary file]";
     }
 }
